--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -20,4 +20,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/btn_plus"
+        android:layout_width="70dp"
+        android:layout_height="80dp"
+        android:gravity="center_horizontal"
+        app:cornerRadius="70dp"
+        app:icon="@mipmap/plus_foreground"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:iconSize="90dp"
+        app:iconTint="#F3F3F3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.903"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
 </androidx.constraintlayout.widget.ConstraintLayout>
