--- a/app/src/main/res/layout/activity_assignment__add.xml
+++ b/app/src/main/res/layout/activity_assignment__add.xml
@@ -10,6 +10,7 @@
         android:id="@+id/et_subject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autoSizeTextType="uniform"
         android:layout_marginTop="100dp"
         android:backgroundTint="#9E62DA"
         android:ems="10"
@@ -25,6 +26,7 @@
         android:id="@+id/et_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autoSizeTextType="uniform"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="제목"
@@ -39,6 +41,7 @@
         android:id="@+id/et_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autoSizeTextType="uniform"
         android:layout_marginTop="24dp"
         android:clickable="true"
         android:ems="10"
@@ -54,6 +57,7 @@
         android:id="@+id/et_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autoSizeTextType="uniform"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="마감시간"
