210111 과제입력창 수정

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,11 +15,24 @@
         android:id="@+id/navigation_dashboard"
         android:name="com.example.sweenov.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_navigation_dashboard_to_additionFragment"
+            app:destination="@id/additionFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.sweenov.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/additionFragment"
+        android:name="com.example.sweenov.AdditionFragment"
+        android:label="@string/title_additions"
+        tools:layout="@layout/fragment_addition" >
+        <action
+            android:id="@+id/action_additionFragment_to_navigation_dashboard"
+            app:destination="@id/navigation_dashboard" />
+    </fragment>
 </navigation>
