--- a/app/src/main/res/layout/fragment_addition.xml
+++ b/app/src/main/res/layout/fragment_addition.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Assignment_Add">
+    tools:context="com.example.sweenov.AdditionFragment">
 
     <EditText
         android:id="@+id/et_subject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autoSizeTextType="uniform"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="#9E62DA"
         android:ems="10"
         android:hint="과목명"
@@ -30,7 +30,6 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="제목"
-        android:inputType="textPersonName"
         android:backgroundTint="#9E62DA"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +71,7 @@
         android:id="@+id/btn_add"
         android:layout_width="160dp"
         android:layout_height="70dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:text="+ 추가"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
