--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -15,6 +15,8 @@
         android:layout_marginBottom="9dp"
 
         android:background="@drawable/thu"
+        android:text="THU"
+        android:textColor="#00FFFFFF"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_profile"
         app:layout_constraintStart_toEndOf="@+id/wed"
@@ -29,6 +31,8 @@
         android:layout_marginLeft="7dp"
         android:layout_marginBottom="9dp"
         android:background="@drawable/tue"
+        android:text="TUE"
+        android:textColor="#00FFFFFF"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_profile"
         app:layout_constraintStart_toEndOf="@+id/mon"
@@ -43,6 +47,8 @@
         android:layout_marginLeft="7dp"
         android:layout_marginBottom="9dp"
         android:background="@drawable/wed"
+        android:text="WED"
+        android:textColor="#00FFFFFF"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_profile"
         app:layout_constraintStart_toEndOf="@+id/tue"
@@ -57,6 +63,8 @@
         android:layout_marginLeft="7dp"
         android:layout_marginBottom="9dp"
         android:background="@drawable/fri"
+        android:text="FRI"
+        android:textColor="#00FFFFFF"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_profile"
         app:layout_constraintStart_toEndOf="@+id/thu"
@@ -71,6 +79,8 @@
         android:layout_marginLeft="7dp"
         android:layout_marginBottom="9dp"
         android:background="@drawable/sat"
+        android:text="SAT"
+        android:textColor="#00787474"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_profile"
         app:layout_constraintStart_toEndOf="@+id/fri"
@@ -85,6 +95,8 @@
         android:layout_marginLeft="7dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/sun"
+        android:text="SUN"
+        android:textColor="#00FFFFFF"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/sat"
         app:layout_constraintTop_toTopOf="parent" />
@@ -97,6 +109,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="9dp"
         android:background="@drawable/mon"
+        android:text="MON"
+        android:textColor="#00FFFFFF"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_profile"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,5 +127,18 @@
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sun" />
+
+    <TextView
+        android:id="@+id/TodayINFO"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginBottom="8dp"
+        android:text="MON"
+        android:textColor="#9E62DA"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/rv_profile"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
