알람설정창 들어갈 시 5초 후에 푸시알림 기능

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -28,135 +28,14 @@
         android:layout_marginHorizontal="10dp"
         android:background="#FF303030" />
 
-
-    <LinearLayout
+    <Button
+        android:id="@+id/alarmsetting_btn"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <Switch
-            android:id="@+id/isAlarm_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:layout_weight="1"
-            android:text="과제 알람"
-            android:textSize="18dp" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Switch
-            android:id="@+id/vibrate_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:layout_weight="1"
-            android:text="진동"
-            android:textSize="18dp" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="20dp"
-                android:text="알람 형태"
-                android:textColor="@color/black"
-                android:textSize="18dp">
-
-            </TextView>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/checkBox1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="30dp"
-                    android:layout_weight="1"
-                    android:text="과제마감 4시간 전"
-                    android:textSize="10dp" />
-
-                <CheckBox
-                    android:id="@+id/checkBox2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="30dp"
-                    android:layout_weight="1"
-                    android:text="과제마감 2시간 전"
-                    android:textSize="10dp" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/checkBox3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="30dp"
-                    android:layout_weight="1"
-                    android:text="과제마감 1시간 전"
-                    android:textSize="10dp" />
-
-                <CheckBox
-                    android:id="@+id/checkBox4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="35dp"
-                    android:layout_weight="1"
-                    android:text="과제마감 30분 전"
-                    android:textSize="10dp" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <!--    평점 매기기 링크   -->
-    </LinearLayout>
+        android:layout_height="61dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:text="알람 설정하기" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -198,6 +77,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -234,6 +114,7 @@
                     android:layout_weight="1" />
 
                 <Button
+                    android:id="@+id/mailing"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="18dp"
@@ -262,6 +143,7 @@
                     android:layout_weight="1" />
 
                 <Button
+                    android:id="@+id/logout"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="18dp"
@@ -302,4 +184,10 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </LinearLayout>
