--- a/app/src/main/res/layout/fragment_studymode.xml
+++ b/app/src/main/res/layout/fragment_studymode.xml
@@ -77,7 +77,7 @@
         android:textOn=" "
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textWhite" />
+        app:layout_constraintTop_toBottomOf="@+id/textWN" />
 
     <TextView
         android:id="@+id/textTimer"
@@ -106,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textTimer" />
 
     <TextView
-        android:id="@+id/textWhite"
+        android:id="@+id/textWN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
